fix hidden, use it instead of collapsed for the progress bar

--- a/apps/email/style/mail.css
+++ b/apps/email/style/mail.css
@@ -4,7 +4,7 @@
   display: none !important;
 }
 .hidden {
-  display: hidden !important;
+  visibility: hidden !important;
 }
 
 html {
